# take-me-one-more

./: .gitignore  .gitmodules  README.md  essay.tex  references.bib
.github/workflows/: c-cpp.yml  test.yml
references/: compressing-sets-of-similar-images-using-hybrid-compression-mode.skim
research/: essay.aux_
tool/: .clang-format  .gitignore  LICENSE  Makefile  main.c  meson.build
tool/playground/: beam_1  beam_2.ppm  image  image_2  inception  inception_2.ppm
tool/playground/images/: inception_2.ppm  test.txt
tool/src/: array.c  array.h  beam.c  beam.h  error.c  error.h  file.c  file.h  global.c  global.h  globals.c  globals.h  main.c
tool/tests/: array.test.c  beam.test.c  example.test.c  file.test.c  globals.test.c  main.test.c  runner.test.c
